Anonymous | Login | 2019-02-19 22:19 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0026989 | Community | [OCCT] OCCT:Data Exchange | public | 2015-12-13 13:28 | 2016-04-20 15:50 | ||||
Reporter | Roman Lygin | ||||||||
Assigned To | bugmaster | ||||||||
Priority | high | Severity | major | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 6.9.1 | ||||||||
Target Version | [OCCT] 7.0.0 | Fixed in Version | [OCCT] 7.0.0 | ||||||
Summary | 0026989: [Regression in 6.9.0] Export of a reversed face leads to wrong data in 6.9.0 | ||||||||
Description | Apparently another adverse side effect of #25632 in addition to issue 0026419. A reversed face during export to IGES cannot be imported back - the resulting face contains only 2 edges, is 0-area and tpstat reports issues: Draw[164]> tps c TransferRead : ******************************************************************* ****** Statistics on Transfer Process (Read) ****** ****** Check messages ****** ******************************************************************* Count Check ** TRANSFER READ CHECK ** ----- ----------- 1 W:142 0 CurveOnSurface : Edges were intersecting, corrected 1 W:142 0 CurveOnSurface : Null area wire detected, wire skipped Nb Total:2 for 2 items The same face with Forward orientation gracefully produces correct result. Given several regressions discovered in GeomToIGES_GeomSurface as of 6.9.0 (see also 0026931), perhaps the whole algorithm deserves careful review. | ||||||||
Steps To Reproduce | restore C:/temp/f_2.brep whatis f_2 #REVERSED face newmodel brepiges f_2 igesbrep . a * numshape a tpstat c #wrong result orient f_2 F newmodel .... #correct result Test case: bugs iges bug26989 | ||||||||
Tags | No tags attached. | ||||||||
Test case number | bugs iges bug26989 | ||||||||
Attached Files | ![]() ![]() | ||||||||
![]() |
|||||||||||
|
![]() |
|
(0049809) git (administrator) 2016-01-13 11:16 |
Branch CR26989 has been created by ika. SHA-1: 67056eb3b171f9fd867cf64a335828fcdded8842 Detailed log of new commits: Author: ika Date: Tue Jan 12 18:08:26 2016 +0300 0026989: [Regression in 6.9.0] Export of a reversed face leads to wrong data in 6.9.0 Add range for degenerated edges to mirrored pcurves during exporting of reversed faces. |
(0049810) ika (developer) 2016-01-13 11:25 |
The problem with this face was in wrong new pcurve of degenerated edge. The range to it should be set manually after pcurve mirror in algorithm of exporting reversed face, because there is no 3D curve with range for UpdateEdge() method. Dear GKA, could you please review branch CR26989? |
(0049823) gka (developer) 2016-01-13 14:02 |
Branch CR26989 is ready to be tested |
(0049851) apv (tester) 2016-01-14 12:52 |
Dear BugMaster, Branch CR26989 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 67056eb3b171f9fd867cf64a335828fcdded8842 Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MasOS: 134 (134 on master) products component: Linux: 37 (37 on master) Windows: 0 (0 on master) Regressions/Differences: Not detected Testing cases: bugs iges bug26989 - OK http://occt-tests/CR26989-master-occt-64/Debian70-64/bugs/iges/bug26989.html [^] http://occt-tests/CR26989-master-occt-64/Windows-64-VC10/bugs/iges/bug26989.html [^] Testing on Linux: Total MEMORY difference: 90162439 / 89888003 [+0.31%] Total CPU difference: 19106.03999999998 / 19263.980000000094 [-0.82%] Testing on Windows: Total MEMORY difference: 57257555 / 57526605 [-0.47%] Total CPU difference: 18153.539968098856 / 18866.152536099093 [-3.78%] |
(0053001) git (administrator) 2016-04-17 13:54 |
Branch CR26989 has been deleted by kgv. SHA-1: 67056eb3b171f9fd867cf64a335828fcdded8842 |
![]() |
|||
occt: master 52849da6
Timestamp: 2016-01-12 15:08:26 Author: ika Committer: bugmaster [ Details ] [ Diff ] |
0026989: [Regression in 6.9.0] Export of a reversed face leads to wrong data in 6.9.0 Add range for degenerated edges to mirrored pcurves during exporting of reversed faces. |
||
mod - src/BRepToIGES/BRepToIGES_BRShell.cxx | [ Diff ] [ File ] | ||
add - tests/bugs/iges/bug26989 | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2015-12-13 13:28 | Roman Lygin | New Issue | |
2015-12-13 13:28 | Roman Lygin | Assigned To | => gka |
2015-12-13 13:28 | Roman Lygin | File Added: f_2.zip | |
2015-12-13 13:29 | Roman Lygin | Relationship added | related to 0026419 |
2015-12-13 13:29 | Roman Lygin | Relationship added | related to 0026931 |
2016-01-08 10:18 | abv | Priority | normal => high |
2016-01-13 11:16 | git | Note Added: 0049809 | |
2016-01-13 11:25 | ika | Note Added: 0049810 | |
2016-01-13 11:25 | ika | Status | new => resolved |
2016-01-13 11:25 | ika | Steps to Reproduce Updated | View Revisions |
2016-01-13 12:28 | ika | File Added: bug26989.brep | |
2016-01-13 14:02 | gka | Note Added: 0049823 | |
2016-01-13 14:02 | gka | Assigned To | gka => bugmaster |
2016-01-13 14:02 | gka | Status | resolved => reviewed |
2016-01-13 14:31 | apv | Assigned To | bugmaster => apv |
2016-01-14 11:27 | apv | Test case number | => bugs iges bug26989 |
2016-01-14 12:52 | apv | Note Added: 0049851 | |
2016-01-14 12:52 | apv | Assigned To | apv => bugmaster |
2016-01-14 12:52 | apv | Status | reviewed => tested |
2016-01-15 16:57 | bugmaster | Changeset attached | => occt master 52849da6 |
2016-01-15 16:57 | bugmaster | Status | tested => verified |
2016-01-15 16:57 | bugmaster | Resolution | open => fixed |
2016-04-17 13:54 | git | Note Added: 0053001 | |
2016-04-20 15:42 | aiv | Fixed in Version | => 7.0.0 |
2016-04-20 15:50 | aiv | Status | verified => closed |
Copyright © 2000 - 2019 MantisBT Team |