0026989: [Regression in 6.9.0] Export of a reversed face leads to wrong data in 6.9.0

Add range for degenerated edges to mirrored pcurves during exporting of reversed faces.